# realsense_yolo_detection

./: README.md  package.xml  setup.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/yolo/lib/yolo/: control_node  yolo_image_node  yolo_trafficlight_node
install/yolo/share/yolo/: package.sh  package.xml
launch/: yolo_launch.py
log/: latest_build
yolo/: control_node.py  yolo_image_node.py  yolo_node.py  yolo_trafficlight_node.py
yolo/install/: local_setup.sh  setup.sh
yolo/launch/: yolo_launch.py
yolo/log/: latest_build
