<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolo</name>
  <version>0.0.0</version>
  <description>a package for sensor</description>
  <maintainer email="yanagi0214yohei@gmail.com">yohei yanagi</maintainer>
  <license>BSD</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>cv2</exec_depend>
  <exec_depend>sencer_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>std_msgs</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
